# AutoChartist

./: .gitignore  GITHUB_UPLOAD_GUIDE.md  README.md  pyproject.toml  requirements.txt  run.py
assets/examples/: README.md  sales_data.csv  student_scores.csv  test_data.csv
src/autochartist/: __init__.py  __main__.py  app.py  codegen.py  data_loader.py  exporters.py  platform.py  profiling.py  render.py
